fix: don't break titles. Only break overflowed lines.

--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -33,7 +33,6 @@ ul {
 /*******************************/
 /* wrap long titles */
 p,
-h1,
 h2,
 h3,
 h4,
@@ -41,17 +40,4 @@ h5,
 h6,
 li {
   overflow-wrap: break-word !important;
-  word-wrap: break-word !important;
-
-  -ms-word-break: break-all !important;
-  /* This is the dangerous one in WebKit, as it breaks things wherever */
-  word-break: break-all !important;
-  /* Instead use this non-standard one: */
-  word-break: break-word !important;
-
-  /* Adds a hyphen where the word breaks, if supported (No Blink) */
-  -ms-hyphens: auto !important;
-  -moz-hyphens: auto !important;
-  -webkit-hyphens: auto !important;
-  hyphens: auto !important;
 }
